hphp/test/quick/empty_stdClass_prop.php.expectf
Fatal error: Cannot access empty property in %s/empty_stdClass_prop.php on line 7
